# langchain-crc-api

./: .gitignore  README.md  pyproject.toml
crc_api/: api.py  auth.py  client.py  config.py  dao.py
notebooks/: crc.ipynb  init_chroma_vectorstore.ipynb
tests/: conftest.py  test_api.py  test_auth.py
